# multi-scale-temporal-fusion-speaker-diarization-with-uncertainty

./: .gitignore  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  conftest.py  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: config.yaml  metrics_test.csv  metrics_test.json  results.json
scripts/: evaluate.py  predict.py  train.py
src/multi_scale_temporal_fusion_speaker_diarization_with_uncertainty/: __init__.py
src/multi_scale_temporal_fusion_speaker_diarization_with_uncertainty/data/: __init__.py  loader.py  preprocessing.py
src/multi_scale_temporal_fusion_speaker_diarization_with_uncertainty/evaluation/: __init__.py  analysis.py  metrics.py
src/multi_scale_temporal_fusion_speaker_diarization_with_uncertainty/models/: __init__.py  components.py  model.py
src/multi_scale_temporal_fusion_speaker_diarization_with_uncertainty/training/: __init__.py  trainer.py
src/multi_scale_temporal_fusion_speaker_diarization_with_uncertainty/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
